# axum-bbs

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 20250921020554_init.sql
src/: config.rs  main.rs
src/handlers/: posts.rs
src/middleware/: logging.rs
src/models/: post.rs
templates/: index.html
