[package]
name = "axum-learn"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
askama = "0.14.0"
axum = "0.8.4"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
bytes = "1.10.1"
config = "0.15.17"
dotenvy = "0.15.7"
hyper = { version = "1.7.0", features = ["full"] }
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["json"] }
rustls = "0.23.32"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "any", "sqlite"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }